infra/tiler/tilemaker-deployment.yaml
# tilemaker-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tilemaker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tilemaker
  template:
    metadata:
      labels:
        app: tilemaker
    spec:
      containers:
      - name: tilemaker-container
        image: pronittardis/tilemaker
        ports:
        - containerPort: 80
