infra/tiler/vector-tiler-deployment.yaml
# martin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-tiler
spec:
  replicas: 10  
  selector:
    matchLabels:
      app: vector-tiler
  template:
    metadata:
      labels:
        app: vector-tiler
    spec:
      containers:
      - name: vector-tiler
        image: ghcr.io/maplibre/martin:latest 
        ports:
        - containerPort: 3000
        args:
          - "/files"
        volumeMounts:
        - name: tile-storage
          mountPath: /files
      volumes:
      - name: tile-storage
        hostPath:
          path: /hosthome/tiles  # Replace with your actual path
          type: Directory
