infra/tiler/raster-tiler-service.yaml
# titiler-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: titiler-service
spec:
  selector:
    app: titiler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
