infra/tiler/vector-tiler-service.yaml
# core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-tiler-service
spec:
  sessionAffinity: None
  selector:
    app: vector-tiler
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
